--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ tmp/
 
 
 tmp/cache/persistent/myapp_cake_core_cake_dev_en-us
+
+tmp/cache/persistent/myapp_cake_core_cake_dev_en-us
+
+tmp/cache/persistent/myapp_cake_core_cake_dev_en-us
