--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@ tmp/cache/persistent/myapp_cake_core_cake_dev_en-us
 tmp/cache/persistent/myapp_cake_core_cake_dev_en-us
 
 tmp/cache/persistent/myapp_cake_core_cake_dev_en-us
+
+tmp/cache/persistent/myapp_cake_core_cake_dev_en-us
+
+tmp/cache/persistent/myapp_cake_core_cake_en-us
+
+tmp/cache/persistent/myapp_cake_core_file_map
+
+tmp/logs/error.log
